# hcl

./: .gitignore  CMakeLists.android.txt  CMakeLists.default.txt  CMakeLists.txt  CMakeLists.wasm.txt  FindGMP.cmake  README.md  emcc_command  hcl.js  library.cpp  library.h  package-lock.json  package.json
services/Crypto/: Base64.cpp  Base64.h
src/linkage/: auth.cpp  auth.h  emscripten_binding.cpp  emscripten_binding.h  linkage.h  password.cpp  password.h  rsa_key.cpp  rsa_key.h  rsa_keypair.cpp  rsa_keypair.h  rsa_private_key.cpp  rsa_private_key.h  rsa_public_key.cpp  rsa_public_key.h  rsa_symmetric_key.cpp  rsa_symmetric_key.h  secret.cpp  secret.h  string_utils.cpp  string_utils.h  symmetric_key.cpp  symmetric_key.h  user.cpp  user.h
src/services/Crypto/: ACryptoElement.cpp  ACryptoElement.h  AES.cpp  AES.h  AES256.cpp  AES256.h  AFactory.cpp  AFactory.h  AutoRegisterer.cpp  AutoRegisterer.h  AutoRegistrable.cpp  AutoRegistrable.h  Base64.cpp  Base64.h  BigNumber.cpp  BigNumber.h  CryptoHelper.cpp  CryptoHelper.h  EncryptedBlob.cpp  EncryptedBlob.h  Factory.cpp  Factory.h  RSAKey.cpp  RSAKey.h  RijndaelKeySchedule.cpp  RijndaelKeySchedule.h  RijndaelKeySchedule.tpp  RijndaelSubstitutionBox.cpp  RijndaelSubstitutionBox.h  SuperFactory.cpp  SuperFactory.h
src/services/Crypto/AsymmetricCiphers/: AAsymmetricCipher.cpp  AAsymmetricCipher.h  KeyPair.cpp  KeyPair.h  RSA.cpp  RSA.h
src/services/Crypto/BlockCipherModes/: ABlockCipherMode.cpp  ABlockCipherMode.h  AInitializationVectorBlockCipherMode.cpp  AInitializationVectorBlockCipherMode.h  CBC.cpp  CBC.h  ECB.cpp  ECB.h
src/services/Crypto/BlockCiphers/: ABlockCipher.cpp  ABlockCipher.h  AES.cpp  AES.h  AES128.cpp  AES128.h  AES192.cpp  AES192.h  AES256.cpp  AES256.h  Rijndael.cpp  Rijndael.h
src/services/Crypto/Ciphers/: ACipher.cpp  ACipher.h  AsymmetricCipherScheme.cpp  AsymmetricCipherScheme.h  BlockCipherScheme.cpp  BlockCipherScheme.h  ICipherDecryptionKey.cpp  ICipherDecryptionKey.h  ICipherEncryptionKey.cpp  ICipherEncryptionKey.h  PlainCipherScheme.cpp  PlainCipherScheme.h
src/services/Crypto/HashFunctions/: AHashFunction.cpp  AHashFunction.h  SHA2.cpp  SHA2.h  SHA224.cpp  SHA224.h  SHA256.cpp  SHA256.h  SHA384.cpp  SHA384.h  SHA512.cpp  SHA512.h
src/services/Crypto/KeyStretching/: AKeyStretching.h  PBKDF2.cpp  PBKDF2.h
src/services/Crypto/KeyStretchingFunctions/: AKeyStretchingFunction.cpp  AKeyStretchingFunction.h  PBKDF2.cpp  PBKDF2.h
src/services/Crypto/MessageAuthenticationCodes/: AMessageAuthenticationCode.cpp  AMessageAuthenticationCode.h  HMAC.cpp  HMAC.h
src/services/Crypto/Padding/: APaddedCipher.cpp  APaddedCipher.h  APadding.cpp  APadding.h  PKCS7.cpp  PKCS7.h
src/services/Crypto/Paddings/: APadding.h  PaddedCipher.cpp  PaddedCipher.h
src/services/Crypto/PrimalityTests/: APrimalityTest.cpp  APrimalityTest.h  Fermat.cpp  Fermat.h
src/services/Crypto/PrimeGenerators/: APrimeGenerator.cpp  APrimeGenerator.h  CustomPrimeGenerator.cpp  CustomPrimeGenerator.h  TestNico.cpp  TestNico.h
src/services/Crypto/RandomGenerators/: ARandomGenerator.cpp  ARandomGenerator.h  MT19937.cpp  MT19937.h  MT19937Generator.cpp  MT19937Generator.h
src/services/Harpokrat/: Secret.cpp  Secret.h  User.cpp  User.h
src/services/Harpokrat/Secrets/: ASecret.cpp  ASecret.h  IncorrectSecret.cpp  IncorrectSecret.h  Password.cpp  Password.h  PrivateKey.cpp  PrivateKey.h  PublicKey.cpp  PublicKey.h  SymmetricKey.cpp  SymmetricKey.h
tests/: AES.cpp  BigNumber.cpp  FullWorkflow.cpp  Primality.cpp  PrimeGenerator.cpp  RSA.cpp  RijndaelKeySchedule.cpp  SHA.cpp  main.cpp  tests.h
tests/wasm/: index.html  lib-importer.js
